4am last finishing touches
a lot still to do but oh well

--- a/style/style.css
+++ b/style/style.css
@@ -92,3 +92,18 @@ nav #menu li a:hover {
 label {
     display: inline-block;
 }
+
+.centerDiv {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.center {
+    text-align: center;
+}
+table {
+    margin-top:100px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
